<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLogin"
    android:background="@color/dark_blue">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_next_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/swipe_arrow"  />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/btn_next_page"
            android:layout_marginStart="-1dp"
            android:fontFamily="@font/patuaone_regular"
            android:paddingTop="10dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/drawer">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="50dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/patuaone_regular"
                android:text="@string/welcom_admin"
                android:textColor="@color/black"
                android:textSize="33sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/robotoslab_regular"
                android:paddingLeft="5dp"
                android:text="@string/admin_welcome_back_discreiption"
                android:textColor="@color/text_color"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_admin_id"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="60dp"
                android:autofillHints=""
                android:background="@drawable/textbox1"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="15dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="25dp"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/txt_admin_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:background="@drawable/textbox1"
                android:drawableStart="@drawable/baseline_key_24"
                android:drawablePadding="15dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="25dp"
                android:textColor="@color/black"
                android:textColorHint="@color/text_color"
                tools:ignore="VisualLintTextFieldSize" />

            <Button
                android:id="@+id/admin_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/button1"
                android:elevation="10dp"
                android:fontFamily="@font/robotoslab_regular"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="26sp"
                android:textStyle="bold"
                android:transformPivotX="3dp"
                android:transformPivotY="5dp"
                android:layout_marginBottom="40dp"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.constraintlayout.widget.ConstraintLayout>